[gd_scene load_steps=13 format=2]

[ext_resource path="res://windows/egress_queue/egress_queue.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/VT323-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://programs/Breakers/breaker1.tres" type="Resource" id=4]
[ext_resource path="res://shaders/program_shader.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Attacker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -150, 153 ), Vector2( 149.6, 153 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attacker/AttackerSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attacker/AttackerName:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Attacker:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Defender:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 578.5, 163 ), Vector2( 442.088, 153 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Defender/DefenderSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Defender/DefenderName:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Defender:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AccessGranted:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attacker/AttackerSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attacker/AttackerName:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Defender/DefenderName:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AccessGranted/BitsGained:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AccessDenied:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Defender/DefenderSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attacker/AttackerName:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Defender/DefenderName:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "virus_detected"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("VirusDetected:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="EgressQueue" type="ColorRect" groups=[
"egress",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 609.0
margin_bottom = -303.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
attackers = [ ExtResource( 4 ) ]

[node name="DefenderAttackTimer" type="Timer" parent="."]

[node name="AttackerAttackTimer" type="Timer" parent="."]

[node name="Defender" type="Node2D" parent="."]
position = Vector2( 578.5, 163 )

[node name="DefenderSprite" parent="Defender" instance=ExtResource( 5 )]
margin_left = -126.0
margin_top = -126.0
margin_right = 124.0
margin_bottom = 124.0

[node name="DefenderName" type="RichTextLabel" parent="Defender"]
margin_left = -108.488
margin_top = 120.224
margin_right = 117.512
margin_bottom = 160.224
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][shake]Borus"
text = "Borus"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attacker" type="Node2D" parent="."]
position = Vector2( -150, 153 )

[node name="AttackerSprite" parent="Attacker" instance=ExtResource( 5 )]
margin_left = -125.086
margin_top = -127.086
margin_right = 124.914
margin_bottom = 122.914

[node name="AttackerName" type="RichTextLabel" parent="Attacker"]
margin_left = -110.0
margin_top = 120.224
margin_right = 116.0
margin_bottom = 160.224
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][shake]Borus"
text = "Borus"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VirusDetected" type="RichTextLabel" parent="."]
modulate = Color( 0.776471, 0.564706, 0.0470588, 1 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -194.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[shake][center]VIRUS DETECTED[/center][/shake]"
text = "VIRUS DETECTED"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccessDenied" type="RichTextLabel" parent="."]
modulate = Color( 0.776471, 0.564706, 0.0470588, 1 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.5
margin_top = -169.0
margin_right = 136.5
margin_bottom = 125.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[shake][center]DENIED[/center][/shake]"
text = "DENIED"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccessGranted" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -164.0
margin_right = 134.0
margin_bottom = 130.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.776471, 0.564706, 0.0470588, 1 )
bbcode_enabled = true
bbcode_text = "[shake][center]GRANTED[/center][/shake]"
text = "GRANTED"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BitsGained" type="RichTextLabel" parent="AccessGranted"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.586
margin_top = 0.785339
margin_right = 135.414
margin_bottom = 294.785
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.776471, 0.564706, 0.0470588, 1 )
bbcode_enabled = true
bbcode_text = "[shake][center]GRANTED[/center][/shake]"
text = "GRANTED"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackerAnimator" type="AnimationPlayer" parent="."]
anims/load_program = SubResource( 4 )

[node name="DefenderAnimator" type="AnimationPlayer" parent="."]
anims/load_program = SubResource( 5 )

[node name="HackSuccessful" type="AnimationPlayer" parent="."]
anims/hack_success = SubResource( 6 )

[node name="HackFailed" type="AnimationPlayer" parent="."]
anims/hack_failed = SubResource( 7 )

[node name="VirusDetectedAnimator" type="AnimationPlayer" parent="."]
anims/virus_detected = SubResource( 8 )
[connection signal="timeout" from="DefenderAttackTimer" to="." method="_on_DefenderAttackTimer_timeout"]
[connection signal="timeout" from="AttackerAttackTimer" to="." method="_on_AttackerAttackTimer_timeout"]
[connection signal="animation_finished" from="HackSuccessful" to="." method="_on_HackSuccessful_animation_finished"]
[connection signal="animation_finished" from="HackFailed" to="." method="_on_HackFailed_animation_finished"]
